src/objects/DTC_User_Setup_Instructions__c 2.object
<CustomObject>
    <label>User Setup Instructions</label>
    <nameField>
        <label>User Type</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>User Setup Instructions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>DTC_Application__c</fullName>
        <label>DTC Application</label>
        <referenceTo>DTC_Application__c</referenceTo>
        <relationshipLabel>User Setup Instructions</relationshipLabel>
        <relationshipName>User_Setup_Instructions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ID__c</fullName>
        <description>Unique ID</description>
        <label>ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Installed_Package_License__c</fullName>
        <label>Installed Package License</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License__c</fullName>
        <label>License Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Need_Related_Contact_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Need Related Contact Record?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_Contact_Information__c</fullName>
        <label>Other Contact Information</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Other_Instructions__c</fullName>
        <label>Other Instructions</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Permission_Sets__c</fullName>
        <label>Permission Sets</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Profile__c</fullName>
        <label>Profile</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Public_Groups__c</fullName>
        <label>Public Groups</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Queues__c</fullName>
        <label>Queues</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Required_Fields_On_Contact__c</fullName>
        <label>Required Fields On Contact Record</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Required_Fields_on_User_Record__c</fullName>
        <label>Required Fields on User Record</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Requires_ePAS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Requires ePAS?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <recordTypes>
        <fullName>DTC</fullName>
        <active>true</active>
        <label>DTC</label>
    </recordTypes>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>